syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.meenachinmay.api_gateway.grpc";

service AccountService {
  rpc CreateAccount (CreateAccountRequest) returns (CreateAccountResponse) {}
}

message CreateAccountRequest {
  string name = 1;
  string phone_number = 2;
  string prefecture = 3;
}

message CreateAccountResponse {
  string message = 1;
}